# agents_framework

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  db_backup.sh  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: lint_and_test.yml
.streamlit/: config.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 149cab87ab4a_missing_fkeys.py  1b72747ee2a1_agent_internal_external_states.py  308f350c52f9_global_and_agent_state.py  33f9a831b32f_add_models.py  426a659ae62d_create_tables.py  475d1f131715_condition_agent_id.py  56c110bc4b05_add_action_params.py  56df6d13bcc0_players.py  5fc0c7a0c865_agent_instructions.py  615891aa104e_literal_param_type.py  6b8ca1e5a098_action_param_type.py  7cc45942f105_action_conditions.py  87f37185bb0c_agent_message_changes.py  95c20a6c12a4_action_conditions.py  bdff033a867b_operator_action_not_null.py  ca81f9c68596_upgrade_conditions.py  d52284b3f2f8_actions_trigger_agents.py  f4b1fec18782_unique_action_name.py
app/api/: dependencies.py  exception_handlers.py  main.py
app/api/response_models/: __init__.py  action_response.py  agent_response.py
app/api/routes/: action_condition.py  actions.py  agents.py  auth.py  conditions.py  params.py  players.py
app/core/: auth.py  database.py
app/db/: database.py
app/errors/: conditions.py
app/llm/: chain.py  models.py  system_message.py
app/models/: __init__.py  action.py  action_condition.py  action_condition_operator.py  action_condition_tree.py  action_param.py  actions_conditions_match.py  actions_conditions_matches.py  agent.py  agent_message.py  agents_actions_match.py  agents_actions_matches.py  global_state.py  player.py
app/repositories/: action_condition_operator_repository.py  action_condition_repository.py  action_param_repository.py  action_repository.py  agent_message_repository.py  agent_repository.py  base_repository.py  global_state_repository.py  player_repository.py  unit_of_work.py
app/services/: action.py  action_condition.py  action_condition_service.py  action_param.py  action_param_service.py  action_service.py  agent.py  agent_service.py  base_service.py  global_state.py  global_state_service.py  llm_service.py  player.py  player_service.py
app/sockets/: __init__.py  agent.py  auth.py  main.py  models.py  state.py
tests/: conftest.py
tests/api/: conftest.py  test_actions.py  test_agents.py  test_auth.py  test_conditions.py  test_params.py  test_players.py
tests/sockets/: conftest.py  test_agent.py  test_auth.py  test_state.py
ui/: Dockerfile  actions.py  agents.py  api.py  login.py  main.py  models.py  players.py  playground.py  sockets.py  todo.py  utils.py
utils/: socketio_client.py
